yamls/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fpjbackend-service
spec:
  type: ClusterIP
  selector:
    app: fpjbe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
